web: Update screenshots from BP4A
Signed-off-by: sidharthify <wednisegit@gmail.com>

--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
                         <img src="ss/updater_3.webp">
                     </div>
                     <div class="screenshot-slide active">
-                        <img src="ss/updater_settings.webp">
+                        <img src="ss/updater_4.webp">
+                    </div>
+                    <div class="screenshot-slide active">
+                        <img src="ss/updater_settings-1.webp">
+                    </div>
+                    <div class="screenshot-slide active">
+                        <img src="ss/updater_settings-2.webp">
                     </div>
                     <div class="screenshot-slide active">
                         <img src="ss/about_phone_1.webp">
@@ -103,9 +109,6 @@
                         <img src="ss/04.webp">
                     </div>
                     <div class="screenshot-slide">
-                        <img src="ss/04-1.webp">
-                    </div>
-                    <div class="screenshot-slide">
                         <img src="ss/05.webp">
                     </div>
                     <div class="screenshot-slide">
@@ -118,13 +121,13 @@
                         <img src="ss/08.webp">
                     </div>
                     <div class="screenshot-slide">
+                        <img src="ss/08-1.webp">
+                    </div>
+                    <div class="screenshot-slide">
                         <img src="ss/09.webp">
                     </div>
                     <div class="screenshot-slide">
-                        <img src="ss/09-1.webp">
-                    </div>
-                    <div class="screenshot-slide">
-                        <img src="ss/010.webp">
+                        <img src="ss/10.webp">
                     </div>
                     <div class="screenshot-slide">
                         <img src="ss/11.webp">
@@ -172,9 +175,6 @@
                         <img src="ss/23.webp">
                     </div>
                     <div class="screenshot-slide">
-                        <img src="ss/23-1.webp">
-                    </div>
-                    <div class="screenshot-slide">
                         <img src="ss/24.webp">
                     </div>
                     <div class="screenshot-slide">
@@ -215,18 +215,6 @@
                     </div>
                     <div class="screenshot-slide">
                         <img src="ss/37.webp">
-                    </div>
-                    <div class="screenshot-slide">
-                        <img src="ss/38.webp">
-                    </div>
-                    <div class="screenshot-slide">
-                        <img src="ss/39.webp">
-                    </div>
-                    <div class="screenshot-slide">
-                        <img src="ss/40.webp">
-                    </div>
-                    <div class="screenshot-slide">
-                        <img src="ss/41.webp">
                     </div>
                 </div>
                 <button class="carousel-arrow right" aria-label="Next Screenshot">
