web: Add carousel view on screenshots
Signed-off-by: sidharthify <wednisegit@gmail.com>

--- a/index.html
+++ b/index.html
@@ -54,13 +54,11 @@
         </section>
 
         <section class="screenshots" id="screenshots">
-                <div class="container">
+            <div class="container">
             <center><h2 class="section-title">Screenshots</h2></center>
             <div class="screenshot-carousel">
-                <button class="carousel-arrow left" aria-label="Previous Screenshot">
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path class="carousel-arrow svg" d="M12 5L7 10L12 15" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                <button class="carousel-arrow left" aria-label="Previous">
+                    <svg viewBox="0 0 24 24"><path d="M15 18l-6-6 6-6"></path></svg>
                 </button>
                 <div class="screenshot-track">
                     <div class="screenshot-slide active">
@@ -217,12 +215,9 @@
                         <img src="ss/37.webp">
                     </div>
                 </div>
-                <button class="carousel-arrow right" aria-label="Next Screenshot">
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path class="carousel-arrow svg" d="M8 5L13 10L8 15" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                <button class="carousel-arrow right" aria-label="Next">
+                    <svg viewBox="0 0 24 24"><path d="M9 18l6-6-6-6"></path></svg>
                 </button>
-
             </div>
             </div>
         </section>
